# iro-linux

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  update_plan.md  ● IRO System Technical Review — Continued
.github/workflows/: ci.yml
iro-core/: .gitignore
iro-core/docs/: INTEROP_ROADMAP.md  PRIMITIVES_SPEC.md
iro-core/overlay/iro/include/iro/: annotations.hpp  config.hpp  iro.hpp  no_new.hpp  version.hpp
iro-core/overlay/iro/include/iro/abi/: common.h  errptr.h  gfp.h  kmem.h  printk.h
iro-core/overlay/iro/include/iro/err/: conversions.hpp  errc.hpp  errno_constants.hpp  errptr.hpp
iro-core/overlay/iro/include/iro/fmt/: fixed_string.hpp  format_string.hpp  format_to.hpp  formatter.hpp  spec.hpp
iro-core/overlay/iro/include/iro/fmt/detail/: emit.hpp  parse.hpp
iro-core/overlay/iro/include/iro/freestanding/: array.hpp  assert.hpp  cstddef.hpp  cstdint.hpp  expected.hpp  initializer_list.hpp  inplace_vector.hpp  new.hpp  optional.hpp  source_location.hpp  span.hpp  string_view.hpp  try.hpp  type_traits.hpp  unique_ptr.hpp  utility.hpp
iro-core/overlay/iro/include/iro/freestanding/detail/: constexpr_mem.hpp  overflow.hpp
iro-core/overlay/iro/include/iro/io/: log.hpp  log_level.hpp
iro-core/overlay/iro/include/iro/mem/: alloc.hpp  box.hpp  boxed_slice.hpp  gfp_mask.hpp  kmem.hpp
iro-core/overlay/iro/include/iro/mem/detail/: align.hpp  checked_size.hpp
iro-core/overlay/iro/include/iro/shadow/: README.md  schema_check.hpp  validate.hpp
iro-core/overlay/iro/include/iro/shadow/sample/: type.hpp
iro-core/overlay/iro/tests/host/: build.sh
iro-core/overlay/iro/tests/host/.build/: freestanding_noexcept_check.cc  iro_core_host_test  try_macros_compile_check.cc  try_new_throwing_ctor.cc  try_new_throwing_ctor_test
iro-core/overlay/iro/tests/host/cases/: basic_test.cc
iro-core/overlay/iro/tests/host/mocks/: abi_errptr_mock.c  abi_gfp_mock.c  abi_kmem_mock.c  abi_printk_mock.c
iro-test/: spec.md
iro-tool/: .gitignore  CMakeLists.txt
iro-tool/docs/: ENHANCEMENT_SPEC.md  iro_v1_5_examples.md
iro-tool/overlay/iro/: Kconfig
iro-tool/overlay/iro/layout/: sample.toml
iro-tool/overlay/scripts/iro/: iro-probe-diag.sh  iro_common.hpp  iro_manifest.hpp
iro-tool/overlay/scripts/iro/depcheck/: depcheck.cc
iro-tool/overlay/scripts/iro/gen_probe/: gen_probe.cc
iro-tool/overlay/scripts/iro/kbuild/: iro.depcheck.mk  iro.host.mk  iro.mk  iro.probe.mk
iro-tool/overlay/scripts/iro/layout_parse/: dwarf_reader.cc  dwarf_reader.hpp  layout_parse.cc
iro-tool/tests/: check_versions.cmake  integration_dwarf_fixtures.cmake  integration_emit_determinism.cmake  perf_baseline.env  perf_gate.sh
iro-tool/tests/fixtures/multi_unit/: multi_unit.toml  probe_extra_a.c  probe_extra_b.c  probe_types.h
iro-tool/tests/fixtures/negative_enum/: negative_enum.toml  probe_enum_anchor.c  probe_types.h
iro-tool/tests/fixtures/negative_enum_explicit/: negative_enum_explicit.toml
iro-tool/tools/: iro-apply.sh
